fixed text overflow

--- a/src/app/pages/item/components/item-list/item-list.component.scss
+++ b/src/app/pages/item/components/item-list/item-list.component.scss
@@ -1,1 +1,7 @@
-
+mat-cell {
+  white-space: nowrap;
+  display: inline;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-right: 15px;
+}
